[package]
name = "fastsimrust"
version = "0.0.1"
edition = "2021" # rust, not fastsim, edition

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "fastsimrust"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.15.1", features = ["extension-module"] }
ndarray = { version = "0.15.4"}
ordered-float = "2.10.0"
csv = "1.1"
# itertools = "0.10.3"

[profile.release]
# https://deterministic.space/high-performance-rust.html
opt-level = 3               # Use slightly better optimizations.
lto = "fat"  # aggressively optimize inter-crate linking
codegen-units = 1  # optimize connection between modules
