[build-system]
requires = ["maturin>=1.0"]
build-backend = "maturin"

[project]
name = "fastsim"
version = "2.0.22"
authors = [{ name = "NREL/MTES/CIMS/MBAP Group", email = "fastsim@nrel.gov" }]
description = "Tool for modeling vehicle powertrains"
readme = "README.md"
license = {file = "LICENSE.md"}
requires-python = ">=3.8,<3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: Other/Proprietary License",
    "Operating System :: POSIX",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
]
dependencies = [
    "pandas>=1",
    "matplotlib>=3.3",
    "numpy>=1.18",
    "seaborn>=0.10",
    "typing_extensions",
    "pyyaml",
]

[project.urls]
Homepage = "https://www.nrel.gov/transportation/fastsim.html" 

[project.optional-dependencies]
dev = ["black", "pytest", "maturin", "plotly", "ipykernel", "pymoo==0.6.0.1",]

[tool.setuptools]
zip-safe = false

[tool.setuptools.packages.find]
where = ["."]  # list of folders that contain the packages (["."] by default)
include = ["fastsim*"]  # package names should match these glob patterns (["*"] by default)
namespaces = false  # to disable scanning PEP 420 namespaces (true by default)

[tool.maturin]
profile="release"
python-source="python"
features = ["pyo3/extension-module"]
module-name = "altrios.altrios_core_py"
manifest-path = "rust/altrios-core-py/Cargo.toml"
include = [
    { format = "sdist", path = "rust/altrios-core/Cargo.toml"},
    { format = "sdist", path = "rust/altrios-core/src/*"},
    { format = "sdist", path = "rust/altrios-core-py/Cargo.toml"},
    { format = "sdist", path = "rust/altrios-core-py/src/*"},
    { format = "sdist", path = "rust/altrios-core/proc-macros/Cargo.toml"},
    { format = "sdist", path = "rust/altrios-core/proc-macros/src/*"},
``]
