[package]
name = "fastsim-core"
version = "1.0.0"
edition = { workspace = true }

[dependencies]
fastsim-proc-macros = { path = "fastsim-proc-macros", version = "3.0.0" }
fastsim-2 = { workspace = true }
csv = "1.1.6"
serde = { version = "1.0.136", features = ["derive"] }
serde_yaml = "0.8.23"
serde_json = "1.0"
uom = { workspace = true }
paste = "1.0.7"
easy-ext = "1.0.0"
rayon = "1.5.3"
bincode = "1.3.3"
log = "0.4.17"
anyhow = { workspace = true }
readonly = "0.2.3"
duplicate = "0.4.1"
nohash-hasher = "0.2.0"
eng_fmt = "0.1.2"

# optional
pyo3 = { workspace = true, features = [
    "extension-module",
    "anyhow",
], optional = true }
serde-this-or-that = "0.4.2"
project-root = "0.2.2"
include_dir = "0.7.3"
itertools = "0.12.0"
lazy_static = "1.4.0"
regex = "1.10.3"
ndarray = "0.15.6"
toml = "0.8.12"

[features]
pyo3 = ["dep:pyo3", "fastsim-2/pyo3"]
