[package]
name = "fastsim-core"
version = "1.0.0"
edition = { workspace = true }

[dependencies]
fastsim-proc-macros = { path = "fastsim-proc-macros", version = "3.0.0" }
fastsim-2 = { workspace = true }
csv = { version = "1.1.6", optional = true }
serde = { version = "1.0.136", features = ["derive"] }
serde_yaml = { version = "0.8.23", optional = true }
serde_json = { version = "1.0", optional = true }
uom = { workspace = true }
paste = "1.0.7"
easy-ext = "1.0.0"
rayon = "1.5.3"
document-features = { workspace = true }
bincode = { version = "1.3.3", optional = true }
log = { version = "0.4.17", optional = true }
anyhow = { workspace = true }
readonly = "0.2.3"
duplicate = "0.4.1"
nohash-hasher = "0.2.0"
eng_fmt = "0.1.2"
pyo3 = { workspace = true, features = [
    "extension-module",
    "anyhow",
], optional = true }
serde-this-or-that = "0.4.2"
project-root = "0.2.2"
include_dir = { version = "0.7.3", optional = true }
itertools = "0.12.0"
lazy_static = "1.4.0"
regex = "1.10.3"
ndarray = "0.15.6"
toml = { version = "0.8.12", optional = true }
derive_more = "0.99.17"
ureq = { version = "2.9.1", optional = true }
url = { version = "2.5.0", optional = true }
pyo3-stub-gen = "0.5.2"

[dev-dependencies]
criterion = "0.3"
rand = "0.8.5"

[[bench]]
name = "interp_bench"
harness = false

[features]
default = ["resources", "web", "serde-default"]
## Enables logging messages that can be passed to Python if `pyo3` is also
## enabled.
logging = ["dep:log"]
## Enables `pyo3` to provide fastsim-3 structs, methods, and functions to Python
pyo3 = ["dep:pyo3", "fastsim-2/pyo3"]
## Compiles external resources (e.g. vehicle files or cycle files) to be
## available in the binary
resources = ["dep:include_dir"]
## Enables internet-querying dependencies
web = ["dep:ureq", "dep:url"]                   
## Enables several text file formats for serialization and deserialization
serde-default = ["csv", "json", "toml", "yaml"]
## Enables binary serialization and deserialization -- somewhat experimental and
## may eventually be deprecated
bincode = ["dep:bincode"]
## Enables csv serialization and deserialization
csv = ["dep:csv"]
## Enables json serialization and deserialization
json = ["dep:serde_json"]
## Enables toml serialization and deserialization
toml = ["dep:toml"]
## Enables yaml serialization and deserialization
yaml = ["dep:serde_yaml"]
