[workspace]

members = [
    "fastsim-cli", # command line app
    "fastsim-core", # pure rust core with optional pyo3 feature
    "fastsim-py", # python module exposing fastsim-core
]

[profile.release]
# https://deterministic.space/high-performance-rust.html
opt-level = 3               # Use better optimizations.
lto = "fat"  # aggressively optimize inter-crate linking
codegen-units = 1  # optimize connection between modules

[workspace.dependencies]
anyhow = "1.0.57"
pyo3 = "0.17.2"
pyo3-log = "*"
serde = "1.0.143"
serde_json = "1.0.83"
serde_yaml = "0.8.24"