[workspace]

members = [
    "fastsim-core",    # pure rust core with optional pyo3 feature
    "fastsim-core-py", # python module exposing fastsim-core
]
resolver = "2"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[workspace.dependencies]
anyhow = "1.0.71"
pyo3 = "0.19"
pyo3-log = "*"
uom = { version = "0.35.0", features = ["use_serde"] }
