[package]
name = "fastsim-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fastsim-core = { path = "../fastsim-core" }
serde = {workspace = true}
serde_json = {workspace = true}
project-root = "0.2.2"
clap = { version = "3.2.6", features = ["derive"] }
regex = "1"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "2.1"
