[package]
name = "fastsim-core"
version = "0.1.6"
edition = "2021"
license = "Apache-2.0"
authors = ["NREL/MTES/CIMS/MBAP Group <fastsim@nrel.gov>"]
description = "Core FASTSim models for vehicle energy usage simulation"
homepage = "https://www.nrel.gov/transportation/fastsim.html"
readme = "../../README.md"
repository = "https://github.com/NREL/fastsim"

[dependencies]
fastsim-proc-macros = { package = "fastsim-proc-macros", path = "./fastsim-proc-macros", version = "0.1.5" }
pyo3 = { workspace = true, features = [
    "extension-module",
    "anyhow",
], optional = true }
anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_yaml = { workspace = true }
ndarray = { workspace = true }
csv = "1.1"
serde_json = "1.0.81"
bincode = "1.3.3"
log = "0.4.17"
polynomial = "0.2.4"
argmin = "0.7.0"
argmin-math = { version = "0.2.1", features = [
    "ndarray_latest-nolinalg-serde",
] }
curl = "0.4.44"
validator = { version = "0.16", features = ["derive"] }
lazy_static = "1.4.0"
regex = "1.7.1"
rayon = "1.7.0"
zip = "0.6.6"
directories = "5.0.1"
include_dir = "0.7.3"
itertools = "0.12.0"
ndarray-stats = "0.5.1"
tempfile = "3.8.1"
url = "2.5.0"
ureq = "2.9.1"
isahc = "1.7.2"

[package.metadata]
include = [
    "resources/longparams.json",
    "resources/udds.csv",
    "resources/hwfet.csv",
    "build.rs",
    "../../NOTICE",
]

[features]
pyo3 = ["dep:pyo3"]
