[build-system]
requires = ["maturin>=0.12,<0.13"]
build-backend = "maturin"

[package.metadata.maturin]
python-source = "../fastsim"

[project]
name = "fastsimrust"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]