[package]
name = "fastsim-py"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["NREL/MTES/CIMS/MBAP Group <fastsim@nrel.gov>"]
description = "Python API for FASTSim models for vehicle energy usage simulation"
homepage = "https://www.nrel.gov/transportation/fastsim.html"
repository = "https://github.com/NREL/fastsim"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pyo3-log = { workspace = true, optional = true }
fastsim-core = { path = "../fastsim-core", features = [
    "pyo3",
], version = "~0", default-features = false }
pyo3 = { workspace = true, features = ["extension-module", "anyhow"] }
log = "0.4.17"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "fastsimrust"
crate-type = ["cdylib"]

[package.metadata]
include = ["../../NOTICE"]

[features]
default = ["full"]
full = [
    "dep:pyo3-log",
    "fastsim-core/full",
    "resources",
    "validation",
    "vehicle-import",
]
resources = ["fastsim-core/resources"]
validation = ["fastsim-core/validation"]
vehicle-import = ["fastsim-core/vehicle-import"]
