[package]
name = "fastsim-py"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fastsim-core = { path = "../fastsim-core", features = ["pyo3"] }
pyo3 = { workspace = true, features = ["extension-module", "anyhow"] }
pyo3-log = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "fastsimrust"
crate-type = ["cdylib"]
