[build-system]
requires = ["maturin>=0.12,<0.13"]
build-backend = "maturin"

# Setting `python-source = "python"` did not seem to work, possibly due to the fact that `fastsim-py` is
# being compiled as `fastsimrust`, which may be bad practice.  Placing `fastsimrust.pyi` in parallel with 
# this file results in generation of a stub file in the appropriate site package.  Also, when `python-source` 
# is not explicitly provided, the compiled executable that python uses lives in site-packages/fastsimrust, 
# which is convenient because then `pip uninstall fastsimrust` kills that file.  
# [package.metadata.maturin]
# python-source = "python"

[project]
name = "fastsimrust"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]