[package]
authors = ["NREL/MTES/CIMS/MBAP Group <fastsim@nrel.gov>"]
name = "fastsim-proc-macros"
version = "0.1.2"
edition = "2021"
license-file = "../../../LICENSE.md"
readme = "../../../README.md"
description = "Procedural macros for FASTSim"
homepage = "https://www.nrel.gov/transportation/fastsim.html"
repository = "https://github.com/NREL/fastsim"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro-error = "1.0.4"
proc-macro2 = "1.0.37"
quote = "1.0.18"
regex = "1.6.0"
syn = { version = "1.0.92", features = ["full"] }

[lib]
proc-macro = true
